# documentation-first-development-with-fastapi

./: .gitignore  README.md
02-introduce-a-conventional-method-to-write-a-comment-based-documentation/app/: pyproject.toml
02-introduce-a-conventional-method-to-write-a-comment-based-documentation/app/src/: main.py
02-introduce-a-conventional-method-to-write-a-comment-based-documentation/app/src/router/: __init__.py  book.py
02-introduce-a-conventional-method-to-write-a-comment-based-documentation/app/src/schema/: book.py
04-introduce-fastapi-and-pydantic-with-a-code-based-documentation/app/: pyproject.toml
04-introduce-fastapi-and-pydantic-with-a-code-based-documentation/app/src/: main.py
04-introduce-fastapi-and-pydantic-with-a-code-based-documentation/app/src/router/: __init__.py  book.py
04-introduce-fastapi-and-pydantic-with-a-code-based-documentation/app/src/schema/: __init__.py  book.py
05-introduce-how-to-write-a-good-code-based-documentation/app/: Makefile  pyproject.toml
05-introduce-how-to-write-a-good-code-based-documentation/app/src/: main.py
05-introduce-how-to-write-a-good-code-based-documentation/app/src/constant/: __init__.py  language.py  router.py
05-introduce-how-to-write-a-good-code-based-documentation/app/src/router/: __init__.py
05-introduce-how-to-write-a-good-code-based-documentation/app/src/router/v1/: __init__.py  book.py
05-introduce-how-to-write-a-good-code-based-documentation/app/src/router/v2/: __init__.py  author.py  book.py
05-introduce-how-to-write-a-good-code-based-documentation/app/src/schema/: __init__.py
05-introduce-how-to-write-a-good-code-based-documentation/app/src/schema/response/: __init__.py  error.py  success.py
06-introduce-how-to-make-a-code-based-documentation-secured/app/: pyproject.toml
06-introduce-how-to-make-a-code-based-documentation-secured/app/src/: main.py
06-introduce-how-to-make-a-code-based-documentation-secured/app/src/constant/: __init__.py  error.py  router.py
06-introduce-how-to-make-a-code-based-documentation-secured/app/src/middleware/: __init__.py  authenticator.py
06-introduce-how-to-make-a-code-based-documentation-secured/app/src/router/: __init__.py
06-introduce-how-to-make-a-code-based-documentation-secured/app/src/schema/: __init__.py
(+27 files in other folders)
