[tool.poetry]
name = "02-introduce-a-conventional-method-to-write-a-comment-based-documentation"
version = "1.0.0"
description = "Introduce a conventional method to write a comment-based documentation"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flasgger = "^0.9.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
