[tool.poetry]
name = "05-introduce-how-to-write-a-good-code-based-documentation"
version = "1.0.0"
description = "Introduce how to write a good code-based documentation."
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
