[tool.poetry]
name = "06-introduce-how-to-make-a-code-based-documentation-secured"
version = "1.0.0"
description = "Introduce how to make a code-based documentation secured."
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
